--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,39 +1,119 @@
-<h2>Register</h2>
-<form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+<div class="container-fluid" style="max-width: 500px;">
+  <h2>Register</h2>
+  <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
     <div class="form-group">
-        <label for="firstName">First Name</label>
-        <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
-        <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
-            <div *ngIf="f.firstName.errors.required">First Name is required</div>
+      <label for="firstName">Imię</label>
+      <input
+        type="text"
+        formControlName="name"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && f.name.errors }"
+      />
+      <div *ngIf="submitted && f.name.errors" class="invalid-feedback">
+        <div *ngIf="f.name.errors.required">Twoje imię jest wymagane.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="surname">Nazwisko</label>
+      <input
+        type="text"
+        formControlName="surname"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && f.surname.errors }"
+      />
+      <div *ngIf="submitted && f.surname.errors" class="invalid-feedback">
+        <div *ngIf="f.surname.errors.required">
+          Twoje nazwisko jest wymagane.
         </div>
+      </div>
     </div>
     <div class="form-group">
-        <label for="lastName">Last Name</label>
-        <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
-        <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
-            <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+      <label for="date_of_birth">Wiek</label>
+      <input
+        type="date"
+        formControlName="date_of_birth"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && f.date_of_birth.errors }"
+      />
+      <div *ngIf="submitted && f.date_of_birth.errors" class="invalid-feedback">
+        <div *ngIf="f.date_of_birth.errors.required">
+          Twoja data urodzin jest wymagana.
         </div>
+      </div>
     </div>
     <div class="form-group">
-        <label for="username">Username</label>
-        <input type="text" formControlName="username" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.username.errors }" />
-        <div *ngIf="submitted && f.username.errors" class="invalid-feedback">
-            <div *ngIf="f.username.errors.required">Username is required</div>
+      <label for="sex">Płeć</label>
+      <input
+        type="number"
+        formControlName="sex"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && f.sex.errors }"
+      />
+      <div *ngIf="submitted && f.sex.errors" class="invalid-feedback">
+        <div *ngIf="f.sex.errors.required">Płeć jest wymagana.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="city">Miasto</label>
+      <input
+        type="text"
+        formControlName="city"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && f.city.errors }"
+      />
+      <div *ngIf="submitted && f.city.errors" class="invalid-feedback">
+        <div *ngIf="f.city.errors.required">Miasto jest wymagane.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="country">Kraj</label>
+      <input
+        type="text"
+        formControlName="country"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && f.country.errors }"
+      />
+      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+        <div *ngIf="f.country.errors.required">Kraj jest wymagany.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="email">Email</label>
+      <input
+        type="text"
+        formControlName="email"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && f.email.errors }"
+      />
+      <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+        <div *ngIf="f.email.errors.required">Email jest wymagany.</div>
+      </div>
+    </div>
+    <div class="form-group">
+      <label for="password">Hasło</label>
+      <input
+        type="password"
+        formControlName="password"
+        class="form-control"
+        [ngClass]="{ 'is-invalid': submitted && f.password.errors }"
+      />
+      <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+        <div *ngIf="f.password.errors.required">Hasło jest wymagane.</div>
+        <div *ngIf="f.password.errors.minlength">
+          Hasło musi mieć conajmniej 6 znaków.
         </div>
+      </div>
     </div>
+
     <div class="form-group">
-        <label for="password">Password</label>
-        <input type="password" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
-        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
-            <div *ngIf="f.password.errors.required">Password is required</div>
-            <div *ngIf="f.password.errors.minlength">Password must be at least 6 characters</div>
-        </div>
+      <button [disabled]="loading" class="btn btn-primary">
+        <span
+          *ngIf="loading"
+          class="spinner-border spinner-border-sm mr-1"
+        ></span>
+        Register
+      </button>
+      <a routerLink="/login" class="btn btn-link">Cancel</a>
     </div>
-    <div class="form-group">
-        <button [disabled]="loading" class="btn btn-primary">
-            <span *ngIf="loading" class="spinner-border spinner-border-sm mr-1"></span>
-            Register
-        </button>
-        <a routerLink="/login" class="btn btn-link">Cancel</a>
-    </div>
-</form>
+  </form>
+</div>
