--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -111,9 +111,9 @@
           *ngIf="loading"
           class="spinner-border spinner-border-sm mr-1"
         ></span>
-        Register
+        Zarejestruj
       </button>
-      <a routerLink="/login" class="btn btn-link">Cancel</a>
+      <a routerLink="/login" class="btn btn-link">Cofnij</a>
     </div>
   </form>
 </div>
