--- a/src/app/Navbar/navbar.component.html
+++ b/src/app/Navbar/navbar.component.html
@@ -172,8 +172,8 @@
             >
           </li>
           <li class="nav-item">
-            <a class="nav-link" [routerLink]="['']">
-              <i class="fas fa-sign-out-alt"></i>Wyloguj</a
+            <a *ngIf="currentUser" class="nav-link logout" (click)="logout()"
+              ><i class="fas fa-sign-out-alt"></i>Wyloguj</a
             >
           </li>
 
